added test lorem ipsum

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
 </head>
 <body>
-  
+
+  <h1>Lorem ipsum dolor sit amet consectetur</h1>
+
+  <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ab placeat veniam, nulla laudantium velit sapiente. Laudantium harum accusamus facilis, eaque voluptatibus unde a id perspiciatis aliquid, maxime voluptatum assumenda.
+  </p>
+
 <div id="chloropleth_map"></div>
 
 <script type="text/javascript">
