--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
 </head>
 <body>
 
-  <h1>Lorem ipsum dolor sit amet consectetur</h1>
-
-  <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ab placeat veniam, nulla laudantium velit sapiente. Laudantium harum accusamus facilis, eaque voluptatibus unde a id perspiciatis aliquid, maxime voluptatum assumenda.
-  </p>
-
 <div id="chloropleth_map"></div>
 <script type="text/javascript">
 
   var spec2 = "js/aus_choropleth_map.vg.json";
-  vegaEmbed('#choropleth_map', spec2).then(function(result) {
+  vegaEmbed('#chloropleth_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
