--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 
-<div id="chloropleth_map"></div>
+<div id="choropleth_map"></div>
 <script type="text/javascript">
 
-  var spec2 = "js/aus_choropleth_map3.vg.json";
-  vegaEmbed('#chloropleth_map', spec2).then(function(result) {
+  var spec2 = "js/aus_choropleth_map2.vg.json";
+  vegaEmbed('#choropleth_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
