--- a/index.html
+++ b/index.html
@@ -40,5 +40,14 @@
   }).catch(console.error);
 </script>
 
+<div id="buildings"></div>
+<script type="text/javascript">
+
+  var spec2 = "js/buildings.vg.json";
+  vegaEmbed('#buildings', spec2).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+</script>
+
 </body>
 </html>
