--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1>Australia's 2019-2020 Bushfires</h1>
-        <p>This page demonstrates how you can use pure.css grid for your layout.</p>
+        <h1>Australia's Black Summer</h1>
+        <p>An overview of Australia's 2019-2020 bushfire season, known as the Black Summer</p>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -40,7 +40,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-3", style="height: 550px;">
-        <div class="description description-left">
+        <div class="description description-top-left">
           <h2>Thirds Columns Layout</h2>
           <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -74,7 +74,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-4">
-        <div class="description description-left">
+        <div class="description-bottom-left">
           <h2>Three Equal Columns</h2>
           <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
@@ -87,15 +87,14 @@
       <div class="pure-u-1-4">
         <div id="vis3" class="vis-container"></div>
       </div>
-      <div class="pure-u-1-4"></div>
-        <div class="description description-right">
+      <div class="pure-u-1-4">
+        <div>
           <h2>Three Equal Columns</h2>
           <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
             sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
         </div>
       </div>
-
     </div>
     <!-- end pure grid group -->
 
