--- a/index.html
+++ b/index.html
@@ -39,15 +39,25 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-3", style="height: 550px;">
-        <div class="description description-top-left">
+      <div class="pure-u-1-6", style="height: 550px;">
+        <div class="description-top-left1">
           <h2>Thirds Columns Layout</h2>
-          <p>The first column contains text and the second column contains a visualisation.
+          <p class="aligned-paragraph">The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
         </div>
       </div>
+
+      <div class="pure-u-1-6", style="height: 550px;">
+        <div class="description-top-left2">
+          <p class="aligned-paragraph">The first column contains text and the second column contains a visualisation.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+        </div>
+      </div>
+      
       <div class="pure-u-2-3", style="height: 550px;">
         <div id="choropleth_map" class="vis-container"></div>
       </div>
@@ -57,10 +67,10 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-2-3">
-        <div id="healthoutcomes" class="vis-container"></div>
+        <div id="healthoutcomes" class="vis-container2"></div>
       </div>
       <div class="pure-u-1-3">
-        <div class="description description-right">
+        <div class="description-right">
           <h2>First and Second Columns Combined</h2>
           <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
@@ -82,13 +92,13 @@
         </div>
       </div>
       <div class="pure-u-1-4">
-        <div id="vis4" class="vis-container"></div>
+        <div id="vis4" class="vis-container2"></div>
       </div>
       <div class="pure-u-1-4">
-        <div id="vis3" class="vis-container"></div>
+        <div id="vis3" class="vis-container2"></div>
       </div>
       <div class="pure-u-1-4">
-        <div>
+        <div class="description-bottom-right">
           <h2>Three Equal Columns</h2>
           <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
