Added thousands separators for fires on map

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1>Australia's Black Summer</h1>
-        <p>An overview of Australia's 2019-2020 bushfire season, known as the Black Summer</p>
+        <div class="title">
+          <h1>Australia's Black Summer</h1>
+        </div>
+        <div class="subtitle">
+          <h2>An overview of Australia's 2019-2020 bushfire season, known as the Black Summer</h2>
+        </div>
       </div>
     </div>
     <!-- end pure grid group -->
