--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
       </div>
       <div class="pure-u-1-3">
         <div class="description-right">
-          <h2>First and Second Columns Combined</h2>
-          <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
-            faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+          <h2>Short and Long-Term Health Impacts</h2>
+          <p>During the fires, it is estimated that over 75% of Australia’s population was subject to prolonged smoke inhalation. 
+            On Jan 14th 2020, the density of particulates in the air peaked at a level 14 times higher than ever before. 
+            The smoke lead to over 3000 hospital admissions for cardiovascular and respiratory problems and 1300 ER visits for asthma. 
+            The effects can be seen in the numbers of prescription inhaler medications dispensed peaking throughout the fires, 
+            which is visualised on the left.
+            According to the Menzies Institute, bushfire smoke was the cause of 400 deaths across the country in 2019-2020.
+          </p>
         </div>
       </div>
 
@@ -89,7 +93,7 @@
     <div class="pure-g">
       <div class="pure-u-1-4">
         <div class="description-bottom-left">
-          <h2>Three Equal Columns</h2>
+          <h2>Property Damage</h2>
           <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
             sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
@@ -103,7 +107,7 @@
       </div>
       <div class="pure-u-1-4">
         <div class="description-bottom-right">
-          <h2>Three Equal Columns</h2>
+          <h2>Natural, Accidental, or Malicious?</h2>
           <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
             sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
