Removed pointless aligned-paragraph class

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <div class="pure-g">
       <div class="pure-u-1-6", style="height: 550px;">
         <div class="description-top-left1">
-          <h2>Thirds Columns Layout</h2>
-          <p class="aligned-paragraph">The first column contains text and the second column contains a visualisation.
+          <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
@@ -55,7 +54,7 @@
 
       <div class="pure-u-1-6", style="height: 550px;">
         <div class="description-top-left2">
-          <p class="aligned-paragraph">The first column contains text and the second column contains a visualisation.
+          <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
