Added text + other misc changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h1>Australia's Black Summer</h1>
         </div>
         <div class="subtitle">
-          <h2>An overview of Australia's 2019-2020 bushfire season, known as the Black Summer</h2>
+          <h2>An overview of Australia's 2019-2020 bushfire season</h2>
         </div>
       </div>
     </div>
@@ -94,9 +94,12 @@
       <div class="pure-u-1-4">
         <div class="description-bottom-left">
           <h2>Property Damage</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
-            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
+          <p>Damage to property was extensive across the country. More than 3500 homes were lost across all 
+            states and territories, and NSW was hit the hardest, accounting for 2400 of those destroyed homes. 
+            An additional 950 homes were considered damaged but not destroyed in NSW. nationally, there were 
+            over 38,000 insurance claims, and total insurance losses were around $2.3 billion. 
+            Many important production facilities were set ablaze, and estimated total national property 
+            damage costs were in the range of $3.65 billion.</p>
         </div>
       </div>
       <div class="pure-u-1-4">
@@ -107,10 +110,12 @@
       </div>
       <div class="pure-u-1-4">
         <div class="description-bottom-right">
-          <h2>Natural, Accidental, or Malicious?</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
-            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
+          <h2 style="text-align: left;">Natural, Accidental, or Malicious?</h2>
+          <p>The vast majority of bushfires are actually started by people, whether it be deliberate or accidental. 
+            Accidental fires are usually caused by children according to the Australian Institute of Criminology, 
+            and these are not considered malicious. Interestingly, the most common natural cause of fires is lightning.
+            A large portion are marked as suspicious; these are suspected to have been lit by people but this is difficult to prove.
+          </p>
         </div>
       </div>
     </div>
