Final text added

--- a/index.html
+++ b/index.html
@@ -46,19 +46,23 @@
     <div class="pure-g">
       <div class="pure-u-1-6", style="height: 550px;">
         <div class="description-top-left1">
-          <p>The first column contains text and the second column contains a visualisation.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          <p>The 2019-2020 Australia bushfires are some of the largest and most damaging bushfires ever recorded 
+            in the country. The fires began unusually early in June 2019, and the season lasted until May 2020. 
+            The main reason for the awfully bad fires was the dry conditions in the months leading up to them. 
+            Low rainfall and drier soil allowed the fires to spread extremely quickly, according to the CSIRO 
+            and the Bureau of Meteorology. The fires caused the temperature of the stratosphere above Australia 
+            to rise by 3 degrees celsius. </p>
         </div>
       </div>
 
       <div class="pure-u-1-6", style="height: 550px;">
         <div class="description-top-left2">
-          <p>The first column contains text and the second column contains a visualisation.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          <p>A study in 2021 using satellite data estimated that 715 million tons of CO2 was released by the fires, 
+            which is almost as much as annual global air travel. 34 people lost their lives in the blaze, 9 of 
+            which were firefighters. Smoke inhalation also caused a further 440 indirect deaths. 
+            About 243,000 square kilometres of land was set alight, destroying entire ecosystems and killing up 
+            to 3 billion terrestrial vertebrates. The geographic extent of the fires is visualised to the right, 
+            as well as the 50 largest fires.</p>
         </div>
       </div>
       
@@ -81,7 +85,7 @@
             The smoke lead to over 3000 hospital admissions for cardiovascular and respiratory problems and 1300 ER visits for asthma. 
             The effects can be seen in the numbers of prescription inhaler medications dispensed peaking throughout the fires, 
             which is visualised on the left.
-            According to the Menzies Institute, bushfire smoke was the cause of 400 deaths across the country in 2019-2020.
+            According to the Menzies Institute, bushfire smoke was the cause of 440 deaths across the country in 2019-2020.
           </p>
         </div>
       </div>
