--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       
       <div class="pure-u-2-3", style="height: 550px;">
-        <div id="choropleth_map" class="vis-container"></div>
+        <div id="choropleth_map" class="vis-container-top"></div>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -75,7 +75,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-2-3">
-        <div id="healthoutcomes" class="vis-container2"></div>
+        <div id="healthoutcomes" class="vis-container-middle"></div>
       </div>
       <div class="pure-u-1-3">
         <div class="description-right">
