--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://fit3179.github.io/Vega-Lite/" target="_blank">FIT3179
-            Teaching Team</a>. The datasource is <a href="#" target=" _blank">some data repository online</href>.</p>
+        <h1>References</h1>
+        <p>The ABC: <a href="https://www.abc.net.au/news/science/2019-11-20/bushfire-ignition-source-how-we-know/11701132">.</p>
       </div>
     </div>
 
