Added state filtering to buildings damaged plot

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     var specVis1 = "js/aus_choropleth_map3.vg.json";
     var specVis2 = "js/healthoutcomes.vg.json";
     var specVis3 = "js/ignitions.vg.json";
-    var specVis4 = "js/buildings.vg.json";
+    var specVis4 = "js/buildings2.vg.json";
 
     vegaEmbed('#choropleth_map', specVis1, { "actions": false }).then(function(result) {
     }).catch(console.error);
