--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
         <div id="vis5" class="vis-container-long"></div>
       </div>
     </div>
-
     
     <div class="pure-g">
       <div class="pure-u-1-4">
@@ -126,10 +125,17 @@
     
 
     <div class="pure-g">
-      <div class="pure-u-1-1 small-font">
-        <h1>References</h1>
-        <p>The ABC: <a href="https://www.abc.net.au/news/science/2019-11-20/bushfire-ignition-source-how-we-know/11701132">.</p>
-      </div>
+      <div class="pure-u-1-1">
+        <div class="refs">
+            <h2>References</h2>
+            <p><b>Visualisation by Coen Pasitchnyj, 13/10/24</b></p>
+            <p>AUS DCCEEW: <a href="https://fed.dcceew.gov.au/maps/erin::aus-geebam-fire-severity-dataset-2019-2020-download-file/about">AUS GEEBAM Fire Severity Dataset (2019-2020)</a></p>
+            <p>Geoscience Australia: <a href="https://ecat.ga.gov.au/geonetwork/srv/eng/catalog.search#/metadata/147763">Historical Bushfire Boundaries</a></p>
+            <p>Institute of Health and Welfare: <a href="https://www.aihw.gov.au/reports/environment-and-health/short-term-health-impacts-2019-20-bushfires/data">Australian bushfires 2019/20: exploring the short-term health impacts</a></p>
+            <p>National Emergency Management Agency: <a href="https://knowledge.aidr.org.au/resources/black-summer-bushfires-vic-2019-20/">Bushfires - Black Summer</a></p>
+            <p>The ABC: <a href="https://www.abc.net.au/news/science/2019-11-20/bushfire-ignition-source-how-we-know/11701132">This is how most bushfires in Australia start, and how we know</a></p>
+          </div>
+        </div>
     </div>
 
 
